overflow issues

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 #spacechunk {
 	height: 350px;
 	background-color: #272727;
+	overflow: hidden;
 }
 
 .container2 {
@@ -19,12 +20,14 @@
 	background-color: #272727;
 	margin-bottom: 20px;
 	margin-top: 20px;
+	
 }
 
 .container3 {
 	max-width: 100%;
 	height: auto;
 	margin-top: 20px;
+	
 }
 
 .titlemain {
@@ -40,15 +43,17 @@
 }
 
 #grad1 {
-    height: 300px;
+    height: 400px;
     background-color: #00b4ff; /* For browsers that do not support gradients */
     background-image: linear-gradient(#272727, #00b4ff); /* Standard syntax (must be last) */
+	overflow: hidden;
 	}
 	
 #grad2 {
     height: 100px;
     background-color: #00b4ff; /* For browsers that do not support gradients */
     background-image: linear-gradient(#272727, #00b4ff); /* Standard syntax (must be last) */
+	overflow: hidden;
 	}
 
 .bg {
